# AgentBazaar

./: .env.example  .gitignore  .npmrc  .vercelignore  CLAUDE.md  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.devcontainer/: Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/api/: .dev.vars.example  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/api/src/: index.ts  types.ts
apps/api/src/db/: client.ts  schema.ts
apps/api/src/middleware/: cors.ts  ratelimit.ts  validate.ts
apps/api/src/routes/: agents.ts  escrows.ts  listings.ts
apps/api/tests/: agents.test.ts  escrows.test.ts  healthz.test.ts  listings.test.ts  ratelimit.test.ts
apps/dashboard/: .env.local.example  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  types.d.ts
apps/dashboard/app/: layout.tsx  page.tsx
apps/dashboard/app/my/: page.tsx
apps/dashboard/components/: WalletProvider.tsx
apps/dashboard/components/agent/: AgentTabs.tsx  StatTile.tsx
apps/dashboard/components/escrow/: Step1Service.tsx  Step2SLA.tsx  Step3Fees.tsx  Step4Review.tsx  StepIndicator.tsx
apps/dashboard/components/marketplace/: AgentCard.tsx  FilterSidebar.tsx  SortControl.tsx
apps/dashboard/components/nav/: Nav.tsx
apps/dashboard/components/ui/: Avatar.tsx  Button.tsx  Card.tsx  Pill.tsx  Select.tsx  Slider.tsx  Tooltip.tsx
apps/dashboard/lib/: api.ts  cluster.ts  sdk.ts
apps/dashboard/styles/: globals.css
apps/gm-agent/: package.json  tsconfig.json  wrangler.toml
apps/gm-agent/src/: handler.ts  index.ts  types.ts
apps/indexer/: Dockerfile  drizzle.config.ts  fly.toml  package.json  tsconfig.json
apps/indexer/docs/: fly-deploy.md  helius-setup.md
apps/indexer/drizzle/: 0000_third_living_lightning.sql  0001_mean_landau.sql  0002_eminent_midnight.sql  0003_happy_supernaut.sql  0004_short_vertigo.sql  0005_rename_price_column.sql
apps/indexer/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
apps/indexer/src/: app.ts  env.ts  index.ts  logger.ts
apps/indexer/src/cron/: retention.ts
apps/indexer/src/db/: client.ts  schema.ts
apps/indexer/src/events/: decoder.ts  escrow-decoder.ts  fetch-metadata.ts  on-delivery-submitted.ts  on-dispute-opened.ts  on-escrow-created.ts  on-escrow-state-changed.ts  on-listing-created.ts  on-listing-updated.ts  on-sla-report.ts
apps/indexer/src/util/: safe-log-url.ts
apps/indexer/src/webhooks/: auth.ts  handler.ts  types.ts
apps/indexer/tests/: env-schema.test.ts  escrow-decoder.test.ts  escrow-event-handlers.integration.test.ts  escrow-event-handlers.test.ts  escrow-schema.test.ts  event-handler.test.ts  fetch-metadata-schema.test.ts  fetch-metadata-ssrf.test.ts  listing-upsert.integration.test.ts  migration.test.ts  retention.test.ts  sanity.test.ts  webhook-replay.test.ts  webhook.test.ts
apps/indexer/tests/helpers/: mock-https.ts
apps/mcp-server/: package.json  vitest.config.ts  wrangler.toml
apps/mcp-server/src/: api-client.ts  auth.ts  index.ts  server.ts  types.ts
apps/mcp-server/src/tools/: hire.ts  (+6 more)
apps/mcp-server/tests/: auth.test.ts  tools.test.ts  write-tools.test.ts
docs/decisions/: 0001-sbf-toolchain-workarounds.md
docs/getting-started/: build-an-agent.md
docs/milestones/: M0-plan.md  M0-summary.md  M1-summary.md  M2-summary.md
docs/protocol/: buyer-provider-http.md  result-hash.md
programs/: .gitignore  Anchor.toml  Cargo.toml  deploy-receipts.md  package.json  pnpm-lock.yaml  tsconfig.json
programs/bazaar-escrow/: Cargo.toml
programs/bazaar-escrow/src/: lib.rs
programs/bazaar-evaluator/: Cargo.toml
programs/bazaar-evaluator/src/: lib.rs
programs/bazaar-registry/: Cargo.toml
programs/bazaar-registry/src/: lib.rs
programs/bazaar-sla/: Cargo.toml
programs/bazaar-sla/src/: lib.rs
programs/tests/: bazaar-escrow.ts  bazaar-registry.ts
programs/tests/fixtures/: devnet-usdc-mint.json  test-mint-authority.json  test-usdc-mint.json
scripts/: backfill-listing-metadata.ts  backfill-listings.ts  confirm-gm-agent.ts  create-gm-ata.ts  demo.ts  hire-gm-agent.ts  install-solana-toolchain.sh  pin-sbf-toolchain-deps.sh  register-gm-agent.ts  register-my-agent.ts  seed-agents.ts
security/: audit-notes.md
tests/: package.json  tsconfig.json
tests/e2e/: dispute-lifecycle.test.ts  full-lifecycle.test.ts  register-discover.test.ts  timeout-lifecycle.test.ts
tests/fixtures/: usdc-mint.ts  wallets.ts
tests/helpers/: escrow-assertions.ts  state-assertions.ts  tx-utils.ts
tests/mocks/: helius-webhook.ts  sati.ts  x402.ts
(+2 files in other folders)
