[workspace]
resolver = "2"
members = [
    "bazaar-registry",
    "bazaar-escrow",
    "bazaar-sla",
    "bazaar-evaluator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/izizevs/AgentBazaar"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi"] }
anchor-spl = "0.31.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
