[package]
name = "bazaar-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentBazaar escrow program — SLA-enforced USDC escrow with state machine."

[lib]
crate-type = ["cdylib", "lib"]
name = "bazaar_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bazaar-registry = { path = "../bazaar-registry", features = ["cpi"] }
