[package]
name = "bazaar-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentBazaar escrow program — SLA-enforced USDC escrow with state machine."

[lib]
crate-type = ["cdylib", "lib"]
name = "bazaar_escrow"

[features]
# testing = [] is included in default so `anchor test` (which runs `anchor build`)
# compiles with the test USDC mint constant. Production builds use
# `anchor build --no-default-features --features devnet` (devnet) or
# `anchor build --no-default-features` (mainnet).
default = ["testing"]
devnet = []
testing = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bazaar-registry = { path = "../bazaar-registry", features = ["cpi"] }
