[package]
name = "bazaar-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentBazaar escrow program — SLA-enforced USDC escrow with state machine."

[lib]
crate-type = ["cdylib", "lib"]
name = "bazaar_escrow"

[features]
# Default (no flags) → devnet USDC mint 4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU.
# Local anchor tests load the mint via [[test.validator.account]] in Anchor.toml.
# Mainnet: `cargo build-sbf --features mainnet` → EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v
default = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bazaar-registry = { path = "../bazaar-registry", features = ["cpi"] }
