[package]
name = "bazaar-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentBazaar service registry — ServiceListing PDAs, discovery metadata."

[lib]
crate-type = ["cdylib", "lib"]
name = "bazaar_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
