[package]
name = "bazaar-sla"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentBazaar SLA program — severity scoring + refund split invoked via CPI from escrow."

[lib]
crate-type = ["cdylib", "lib"]
name = "bazaar_sla"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
